<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_giftcard"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="10dp"
            android:background="@drawable/giftcard_bg"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView

                    android:id="@+id/img_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:padding="5dp"
                    />

                <LinearLayout
                    android:id="@+id/lltop"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_toRightOf="@+id/img_icon"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_giftcard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Vodafone"
                        android:textColor="#e60000"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/txtRegion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(India)"
                        android:textColor="#e60000"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/txt_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2000 points"
                        android:textColor="@color/white" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txt_worth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="₹200"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle= "italic|bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/txt_recipient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipient"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <ImageView
                    android:id="@+id/imgBigIcon"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@+id/rl_giftcard"
            android:text="@string/disclaimer_mobile"/>
        <LinearLayout
            android:id="@+id/llDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDescription"
            android:padding="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/llCircle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/select_circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/spinnerCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/mobile_circle"
                    android:spinnerMode="dialog"
                    tools:listitem="@layout/support_simple_spinner_dropdown_item"/>
            </LinearLayout>

            <EditText
                android:id="@+id/etRecipient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:hint="Enter Phone" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_redeem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/llDetails"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_background"
            android:text="@string/redeem"
            android:textColor="@color/white" />
    </RelativeLayout>
</ScrollView>