<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E5E7E9">

        <RelativeLayout
            android:id="@+id/rl_video_bonus"
            android:layout_width="match_parent"
            android:background="@mipmap/ic_video_bonus"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_height="90dp">

            <Button
                android:id="@+id/btnVideoBonus"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"

                android:layout_margin="5dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_background"
                android:textColor="@color/white"
                android:enabled="false"
                android:text="@string/claim"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_admob"
            android:layout_width="match_parent"
            android:layout_below="@id/rl_video_bonus"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:background="@drawable/relative_layout_background"
            android:padding="5dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/btnAdmob"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:background="@mipmap/admob_logo"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/watch_earn"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnAdmob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/ic_videoa"
                android:text="@string/watch"
                android:theme="@style/WatchButton" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_vungle"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@+id/rl_admob"
            android:layout_margin="5dp"
            android:background="@drawable/relative_layout_background"
            android:padding="5dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/btnVungle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:background="@mipmap/vungle_logo"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/watch_earn"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnVungle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/ic_videoa"
                android:text="@string/watch"
                android:theme="@style/WatchButton" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_applovin"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@+id/rl_vungle"
            android:layout_margin="5dp"
            android:background="@drawable/relative_layout_background"

            android:padding="5dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btnAppLovin"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:background="@mipmap/applovin_logo"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/watch_earn"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnAppLovin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/ic_videoa"
                android:text="@string/watch"
                android:theme="@style/WatchButton" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>